exploring how to linearize error function

--- a/v3/pose_graph/pose_graph_optimization.ipynb
+++ b/v3/pose_graph/pose_graph_optimization.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 144,
-   "id": "ed7c3362",
+   "execution_count": 2,
+   "id": "315de72a",
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da517c80",
+   "id": "795fd49e",
    "metadata": {},
    "source": [
     "# Pose Graph Optimization\n",
@@ -78,7 +78,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3e60040",
+   "id": "c2c6851e",
+   "metadata": {},
+   "source": [
+    "# State vector $x$\n",
+    "\n",
+    "absolute position and orientation of vehicle at each timestep\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\textbf{x} = \n",
+    "\\begin{bmatrix}\n",
+    "\\textbf{x}_1\\\\\n",
+    "\\textbf{x}_2\\\\\n",
+    "\\textbf{x}_3 \\\\\n",
+    "\\vdots\n",
+    "\\end{bmatrix} = \n",
+    "\\begin{bmatrix}\n",
+    "x_1 & y_1 & z_1 & r_1 & p_1 & y_1 \\\\\n",
+    "x_2 & y_2 & z_2 & r_2 & p_2 & y_2 \\\\\n",
+    "x_3 & y_3 & z_3 & r_3 & p_3 & y_3 \\\\\n",
+    "\\vdots & \\vdots & \\vdots & \\vdots & \\vdots & \\vdots & \\\\ \n",
+    "\\end{bmatrix}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fef9d19b",
    "metadata": {},
    "source": [
     "# Transformations $\\mathbf{X}$  \n",
@@ -97,37 +123,13 @@
     "\n",
     "$\\big(\\mathbf{X}_i^{-1} \\mathbf{X}_{i+1} \\big)$  describes how node $i$ sees node $(i+1)$ (ex: odometry)\n",
     "\n",
-    "$\\big(\\mathbf{X}_i^{-1} \\mathbf{X}_{j} \\big)$  describes how node $i$ sees node $j$ (ex: absolute reference)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5731971b",
-   "metadata": {},
-   "source": [
-    "# State vector $x$\n",
-    "\n",
-    "\\begin{equation}\n",
-    "x = \n",
-    "\\begin{bmatrix}\n",
-    "x_1\\\\\n",
-    "x_2\\\\\n",
-    "x_3 \\\\\n",
-    "\\vdots\n",
-    "\\end{bmatrix} = \n",
-    "\\begin{bmatrix}\n",
-    "x_1 & y_1 & z_1 & r_1 & p_1 & y_1 \\\\\n",
-    "x_2 & y_2 & z_2 & r_2 & p_2 & y_2 \\\\\n",
-    "x_3 & y_3 & z_3 & r_3 & p_3 & y_3 \\\\\n",
-    "\\vdots & \\vdots & \\vdots & \\vdots & \\vdots & \\vdots & \\\\ \n",
-    "\\end{bmatrix}\n",
-    "\\end{equation}"
+    "$\\big(\\mathbf{X}_i^{-1} \\mathbf{X}_{j} \\big)$  describes how node $i$ sees node $j$ (ex: loop closure)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
-   "id": "1b37fe8c",
+   "execution_count": 3,
+   "id": "ffe4e1db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,8 +155,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
-   "id": "41e70ad4",
+   "execution_count": 4,
+   "id": "46179c31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,13 +175,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
-   "id": "a6845c7d",
+   "execution_count": null,
+   "id": "7920d275",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: v2t() -> t2v() is returning to the same value only if I take inverse (for rotation) \n",
-    "#                     and without inverse only (for translation)\n",
+    "#NOTE: v2t() -> t2v() is returning to the same value only if I take inverse (for rotation) \n",
+    "#                     and without inverse only (for translation). [T]^-1 @ [T] = I still\n",
+    "#Question: is this normal?  \n",
+    "\n",
     "# # test = np.array([1., 2., 3., 0.05, 0.00, -0.14])\n",
     "# test = np.ones([2,6])\n",
     "# test[1,:] = np.array([1., 2., 3., 0.003, 0.001, 0.3])\n",
@@ -192,20 +196,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54dd2f6f",
+   "id": "dbdda32c",
    "metadata": {},
    "source": [
     "# Least Squares Error Function\n",
     "\n",
     "\n",
-    "The optimial state vector, $x^*$, occurs as:\n",
+    "The optimial state vector, $x^*$, occurs where:\n",
     "\n",
     "\\begin{equation}\n",
     "\\Large\n",
     "x^* = \\arg\\min_x \\sum_{ij}^{} e^T_{ij}(x_i,x_j)\\Omega_{ij}e_{ij}(x_i,x_j)\n",
     "\\end{equation}\n",
     "\n",
-    "where $\\Omega_{ij}$ is the information matrix associated with the odometry estimate that relates $i$ and $j$. $\\Omega_{ij}$ is the inverse of the covariance matrix $\\sigma_{ij}$\n",
+    "$\\Omega_{ij}$ is the information matrix associated with the odometry estimate that relates $i$ and $j$. $\\Omega_{ij}$ is the inverse of the covariance matrix $\\sigma_{ij}$\n",
     "\n",
     "the error funcion for each connected node $i,j$ as a function of the state vector $x$ is defined as:\n",
     "\n",
@@ -215,10 +219,12 @@
     "\\end{equation}\n",
     "\n",
     "\\begin{equation}\n",
-    "Z_{ij}^{-1} = \\text{measurement}\n",
+    "\\large\n",
+    "Z_{ij}^{-1} = \\text{constraint (from measurement)}\n",
     "\\end{equation}\n",
     "\n",
     "\\begin{equation}\n",
+    "\\large\n",
     "(X_j^{-1}X_i) = x_i \\text{ relative to }x_j \\text{ given the current model of system} \n",
     "\\end{equation}\n",
     "\n",
@@ -227,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26112968",
+   "id": "6a3da390",
    "metadata": {},
    "source": [
     "# Linearizing the System\n",
@@ -241,22 +247,43 @@
     "\n",
     "\\begin{equation}\n",
     "\\Large\n",
-    "J_{ij} = \\frac{\\delta e_{ij}}{\\delta x}\n",
+    "J_{ij} = \\frac{\\delta e_{ij}(x)}{\\delta x} = \\bigg{(} 0 \\dots \\frac{\\delta e_{ij}(x_i)}{\\delta x_i}\n",
+    "\\dots \\frac{\\delta e_{ij}(x_j)}{\\delta x_j} \\dots 0 \\bigg{)}\n",
     "\\end{equation}\n",
+    "\n",
+    "<!-- \\begin{equation}\n",
+    "\\Large\n",
+    "J\n",
+    "\\end{equation} -->"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "edc9a25e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO make function to generate J\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "18282294",
+   "id": "40a3a211",
    "metadata": {},
    "source": [
-    "Similar to ICET, we can use Newton-Raphson to iteratively solve for small perterbations to the state vector $x$ that bring us towards a better solution"
+    "### Similar to ICET, we can use Newton-Raphson to iteratively solve for small perterbations to the state vector $x$ that bring us towards a better solution\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\Large\n",
+    "x \\rightarrow x + \\Delta x\n",
+    "\\end{equation}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3f60badb",
+   "id": "b67ca0bc",
    "metadata": {},
    "source": [
     "\\begin{equation}\n",
@@ -278,27 +305,80 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21331bf6",
+   "id": "0179bbe7",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d7aa279a",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2.  3.]\n",
+      " [ 3.  4.]\n",
+      " [ 2.  3.]\n",
+      " [ 4. 11.]\n",
+      " [ 3. 11.]\n",
+      " [11. 14.]\n",
+      " [11. 14.]\n",
+      " [14. 17.]\n",
+      " [14. 17.]\n",
+      " [17. 20.]\n",
+      " [17. 20.]\n",
+      " [20. 23.]\n",
+      " [20. 24.]\n",
+      " [23. 26.]\n",
+      " [24. 27.]\n",
+      " [26. 29.]\n",
+      " [27. 30.]\n",
+      " [29. 32.]\n",
+      " [30. 33.]\n",
+      " [32. 35.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load test data\n",
+    "odometry_history = np.load(\"test_data/leddartech_pixset/T_vec_history.npy\")\n",
+    "cov_estimate_history = np.load(\"test_data/leddartech_pixset/cov_vec_history.npy\")\n",
+    "print(odometry_history[:20,-2:])\n",
+    "# print(cov_estimate_history)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "adce42b8",
+   "id": "5fbce484",
    "metadata": {},
    "source": [
     "# TODO\n",
     "\n",
-    "Use ICET error covaraince estimation to demonstrate improvement in accuracy for Volpe Dataset \n",
+    "Get derivitive of error function\n",
     "\n",
-    "Is what we did in ICET to handle sparsity similar to a Choelesky Decomposition?\n"
+    "\n",
+    "# Questions\n",
+    "\n",
+    "What is the Jacobian of the error function??\n",
+    "\n",
+    "Is what we did in ICET to handle sparsity similar to a Choelesky Decomposition?\n",
+    "\n",
+    "\n",
+    "# Potential Contributions\n",
+    "\n",
+    "Use ICET error covaraince estimation to demonstrate improvement in accuracy for Volpe Dataset \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f25e612",
+   "id": "87c82ba7",
    "metadata": {},
    "outputs": [],
    "source": []
