finished J, exploring sparse cholesky solver

--- a/v3/pose_graph/pose_graph_optimization.ipynb
+++ b/v3/pose_graph/pose_graph_optimization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 62,
    "id": "db869367",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 2,
    "id": "dbae8a19",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 3,
    "id": "01e25b0a",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 4,
    "id": "06c66d4c",
    "metadata": {},
    "outputs": [],
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 480,
+   "execution_count": 209,
    "id": "78eb22a7",
    "metadata": {},
    "outputs": [],
@@ -244,48 +244,25 @@
     "    Zij == pose j relative to i according to nodes (rotation matrix)\n",
     "    Xij == pose j relative to i according to constraints (rotation matrix)\n",
     "    \"\"\"        \n",
-    "    e_ij = t2v(tf.linalg.pinv(Zij) @ Xij) #should be this\n",
-    "#     print(\"v1\", e_ij)\n",
-    "#     e_ij = t2v(tf.linalg.pinv(tf.linalg.pinv(Zij) @ Xij)) #why do I have to do this to get things to work out?\n",
-    "#     print(\"v2\", e_ij)\n",
+    "    e_ij = t2v(tf.linalg.pinv(Zij) @ Xij)\n",
     "\n",
     "    return(e_ij)    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 481,
+   "execution_count": 220,
    "id": "f0c970bd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tf.Tensor(\n",
-      "[[ 9.99949875e-02  9.99998288e-04 -4.96975007e-05  3.00000000e-04\n",
-      "   5.00000000e-04  2.00000000e-03]], shape=(1, 6), dtype=float64)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Zij = v2t(np.array([1.,  0., 0., 0.0003, 0.0005, 0.01 ])) # get from graph \n",
-    "Xij = v2t(np.array([1.1, 0., 0., 0.,     0.0,    0.008])) # get from odometry message\n",
-    "\n",
+    "Zij = v2t(np.array([1.,  1.9, 0., 0.0003, 0.0005, 0.01 ])) # get from graph \n",
+    "Xij = v2t(np.array([1.1, 2.0, 0., 0.,     0.0,    0.008])) # get from odometry message\n",
     "# Zij =  v2t(np.zeros([2,6]))\n",
     "# Xij =  v2t(np.random.randn(2,6))\n",
     "\n",
-    "\n",
     "e_ij = get_e_ij(Zij, Xij)\n",
-    "print(e_ij)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c5e5ce07",
-   "metadata": {},
-   "source": [
-    "<span style=\"color:red\"> TODO: fix numerics here! Why is it not just t2v(Zij) - t2v(Zij)?? </span>\n"
+    "# print(e_ij)"
    ]
   },
   {
@@ -305,13 +282,12 @@
     "\\begin{equation}\n",
     "\\Large\n",
     "J_{ij} = \\frac{\\delta e_{ij}(x)}{\\delta x} = \\bigg{(} 0 \\dots \\frac{\\delta e_{ij}(x_i)}{\\delta x_i}\n",
-    "\\dots \\frac{\\delta e_{ij}(x_j)}{\\delta x_j} \\dots 0 \\bigg{)}\n",
+    "\\dots \\frac{\\delta e_{ij}(x_j)}{\\delta x_j} \\dots 0 \\bigg{)} = \\bigg{(} 0 \\dots A_{ij} \\dots B_{ij} \\dots 0 \\bigg{)} \n",
     "\\end{equation}\n",
     "\n",
-    "<!-- \\begin{equation}\n",
-    "\\Large\n",
-    "J\n",
-    "\\end{equation} -->"
+    "\\begin{equation}\n",
+    "A_{ij}, B_{ij} \\in \\mathbb{R}^{6 \\times 6}\n",
+    "\\end{equation}"
    ]
   },
   {
@@ -320,37 +296,34 @@
    "metadata": {},
    "source": [
     "\\begin{equation}\n",
-    "\\Large\n",
-    "J_{ij}(x) \\in \\mathbb{R}^{3N \\times 6}\n",
+    "J_{ij}(x) \\in \\mathbb{R}^{6 \\times 6N}\n",
     "\\end{equation}\n",
     "where $N$ is the total number of poses being solved for (nodes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 478,
+   "execution_count": 221,
    "id": "ce6d7652",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_J_ij(e_ij):\n",
-    "    \"\"\"calculates Jacobian of error function w.r.t. nodes i and j using TensorFlow\n",
+    "def get_A_ij_B_ij(e_ij):\n",
+    "    \"\"\"calculates nonzero terms from the Jacobian of error function w.r.t. nodes i and j using TensorFlow\n",
     "        e_ij == error function [x, y, z, phi, theta, psi]\n",
-    "    \n",
-    "    #NOTE: not the same as Jacobian in ICET since each tensor error input has unique rotation component\n",
-    "\n",
+    "        \n",
+    "        NOTE: this works with batch operations: error vectors passed in as tensor will result in\n",
+    "                corresponding output in the same order \n",
+    "        \n",
     "    \"\"\"\n",
     "    e_ij = tf.cast(e_ij, tf.float32)\n",
     "    \n",
     "    p_point = e_ij[:,:3]\n",
-    "#     print(\"p_point: \\n\", p_point)\n",
     "    phi = e_ij[:,3][:,None]\n",
     "    theta = e_ij[:,4][:,None]\n",
     "    psi = e_ij[:,5][:,None]\n",
     "    \n",
-    "    #correct method using tf.tile\n",
-    "    eyes = tf.tile(-tf.eye(3), [tf.shape(p_point)[0] , 1])\n",
-    "#     print(\"\\n eyes: \\n\", eyes)\n",
+    "    eyes = tf.tile(-tf.eye(3)[None,:,:], [tf.shape(p_point)[0] , 1, 1])\n",
     "    \n",
     "#     deriv of R() wrt phi\n",
     "    dRdPhi = tf.Variable([[tf.zeros(len(phi), dtype = phi.dtype)[:,None], (-sin(psi)*sin(phi) + cos(phi)*sin(theta)*cos(psi)), (cos(phi)*sin(psi) + sin(theta)*sin(phi)*cos(psi))],\n",
@@ -358,7 +331,6 @@
     "                       [tf.zeros(len(phi), dtype = phi.dtype)[:,None], (-cos(phi)*cos(theta)), (-sin(phi)*cos(theta))] ])[:,:,:,0]\n",
     "    dRdPhi = tf.transpose(dRdPhi, (2,0,1))\n",
     "    Jx = dRdPhi @ p_point[:,:,None]\n",
-    "#     print(\"\\n Jx: \\n\", Jx)\n",
     "    \n",
     "    # (deriv of R() wrt theta).dot(p_point)\n",
     "    dRdTheta = tf.Variable([[(-sin(theta)*cos(psi)), (cos(theta)*sin(phi)*cos(psi)), (-cos(theta)*cos(phi)*cos(psi))],\n",
@@ -373,53 +345,55 @@
     "                                       [tf.zeros(len(phi), dtype = phi.dtype)[:,None],tf.zeros(len(phi), dtype = phi.dtype)[:,None],tf.zeros(len(phi), dtype = phi.dtype)[:,None]]])[:,:,:,0]\n",
     "    dRdPsi = tf.transpose(dRdPsi, (2,0,1))\n",
     "    Jz = dRdPsi @ p_point[:,:,None]\n",
-    "#     print(\"\\n Jz: \\n\", Jz)\n",
     "    \n",
-    "    Jx_reshape = tf.reshape(Jx, shape = (tf.shape(Jx)[0]*tf.shape(Jx)[1],1))\n",
-    "    Jy_reshape = tf.reshape(Jy, shape = (tf.shape(Jy)[0]*tf.shape(Jy)[1],1))\n",
-    "    Jz_reshape = tf.reshape(Jz, shape = (tf.shape(Jz)[0]*tf.shape(Jz)[1],1))\n",
-    "#     print(\"\\n Jx_reshape: \\n\", Jx_reshape)\n",
-    "#     print(\"\\n Jy_reshape: \\n\", Jy_reshape)\n",
-    "#     print(\"\\n Jz_reshape: \\n\", Jz_reshape)\n",
-    "\n",
-    "    J = tf.concat([eyes, Jx_reshape, Jy_reshape, Jz_reshape], axis = 1)\n",
-    "    return J"
+    "    top = tf.concat([eyes, Jx, Jy, Jz], axis = 2)\n",
+    "    flipped = tf.concat([tf.transpose(Jx, (0,2,1)), \n",
+    "                         tf.transpose(Jy, (0,2,1)), \n",
+    "                         tf.transpose(Jz, (0,2,1))], axis = 1)\n",
+    "    bottom = tf.concat([flipped, eyes], axis = 2)\n",
+    "    A_ij = tf.concat([top, bottom], axis = 1)\n",
+    "    B_ij = -A_ij\n",
+    "    \n",
+    "    return A_ij, B_ij"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 479,
+   "execution_count": 222,
    "id": "3cea8ad6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " J_ij: \n",
-      " [[-1.e+00 -0.e+00 -0.e+00  4.e-07 -0.e+00  8.e-04]\n",
-      " [-0.e+00 -1.e+00 -0.e+00 -5.e-05  0.e+00 -1.e-01]\n",
-      " [-0.e+00 -0.e+00 -1.e+00 -1.e-03  1.e-01  0.e+00]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# x = odometry_history[:10,:6] #test\n",
-    "# print(x)\n",
-    "# print(e_ij)\n",
+    "A_ij, B_ij = get_A_ij_B_ij(e_ij)\n",
+    "# print(\"A_ij:\\n\", A_ij.numpy().astype(np.float16), \"\\n B_ij: \\n\", B_ij.numpy().astype(np.float16))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e469ff9",
+   "metadata": {},
+   "source": [
+    "# Accumumlate Sparse Tensors\n",
     "\n",
-    "J_ij = get_J_ij(e_ij)\n",
-    "print(\"\\n J_ij: \\n\", J_ij.numpy().astype(np.float16))\n",
-    "# print(J_ij[:,:,:,0])\n",
-    "\n",
-    "# phi = e_ij[:,3][:,None]\n",
-    "# print(phi)\n",
-    "\n",
-    "# test = tf.zeros(len(phi), dtype = phi.dtype)[:,None]\n",
-    "# # print(test)\n",
-    "# test = test*phi\n",
-    "# # print(test)\n"
+    "calculate jacobians in batch operation first, then bring to sparse tensor for matmul??"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "id": "3c041960",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "st_a = tf.sparse.SparseTensor(indices=[[0, 2], [3, 4]],\n",
+    "                       values=[31.0, 2.0], \n",
+    "                       dense_shape=[4, 6])\n",
+    "st_b = tf.sparse.SparseTensor(indices=[[0, 2], [3, 0]],\n",
+    "                       values=[56.0, 38.0],\n",
+    "                       dense_shape=[4, 6])\n",
+    "st_sum = tf.sparse.add(st_a, st_b)\n",
+    "# print(st_sum)\n",
+    "# print(tf.linalg.pinv(tf.sparse.to_dense(st_sum)).numpy())"
    ]
   },
   {
@@ -427,7 +401,7 @@
    "id": "508f8510",
    "metadata": {},
    "source": [
-    "### Similar to ICET, we can use Newton-Raphson to iteratively solve for small perterbations to the state vector $x$ that bring us towards a better solution\n",
+    "Similar to ICET, we can use Newton-Raphson to iteratively solve for small perterbations to the state vector $x$ that bring us towards a better solution\n",
     "\n",
     "\\begin{equation}\n",
     "\\Large\n",
@@ -453,7 +427,75 @@
     "\\begin{equation}\n",
     "\\Large\n",
     "H = \\sum_{ij}^{}H_{ij} = \\sum_{ij}^{}J_{ij}^T \\Omega J_{ij}\n",
-    "\\end{equation}"
+    "\\end{equation}\n",
+    "\n",
+    "Init Hessian once at start of simulation, update in place as new linearizations are added(?)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 306,
+   "id": "ce4df933",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SparseTensor(indices=tf.Tensor(\n",
+      "[[1 3]\n",
+      " [3 1]\n",
+      " [5 5]], shape=(3, 2), dtype=int64), values=tf.Tensor([10.5  10.5  -0.55], shape=(3,), dtype=float32), dense_shape=tf.Tensor([6 6], shape=(2,), dtype=int64))\n",
+      "tf.Tensor(\n",
+      "[[ 0.    0.    0.    0.    0.    0.  ]\n",
+      " [ 0.    0.    0.   10.5   0.    0.  ]\n",
+      " [ 0.    0.    0.    0.    0.    0.  ]\n",
+      " [ 0.   10.5   0.    0.    0.    0.  ]\n",
+      " [ 0.    0.    0.    0.    0.    0.  ]\n",
+      " [ 0.    0.    0.    0.    0.   -0.55]], shape=(6, 6), dtype=float32)\n",
+      "tf.Tensor(0.0, shape=(), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TRY: tf.linalg.cholesky_solve\n",
+    "indices = tf.constant([[1,3], [3,1], [5,5]], dtype = tf.int64) #[N, ndims]\n",
+    "values = tf.constant([10.5, 10.5, -0.55])\n",
+    "dense_shape = tf.constant([6, 6], dtype = tf.int64)\n",
+    "sparse_J =  tf.sparse.SparseTensor(indices, values, dense_shape)\n",
+    "print(sparse_J)\n",
+    "print(tf.sparse.to_dense(sparse_J))\n",
+    "print(tf.linalg.det(tf.sparse.to_dense(sparse_J)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 308,
+   "id": "3d6d19fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[10.        +0.j 20.5       +0.j -0.49999976+0.j 10.        +0.j\n",
+      "  10.        +0.j  9.45      +0.j]], shape=(1, 6), dtype=complex64)\n",
+      "tf.Tensor(\n",
+      "[[[10.    0.    0.    0.    0.    0.  ]\n",
+      "  [ 0.   10.    0.   10.5   0.    0.  ]\n",
+      "  [ 0.    0.   10.    0.    0.    0.  ]\n",
+      "  [ 0.   10.5   0.   10.    0.    0.  ]\n",
+      "  [ 0.    0.    0.    0.   10.    0.  ]\n",
+      "  [ 0.    0.    0.    0.    0.    9.45]]], shape=(1, 6, 6), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test = tf.linalg.cholesky(tf.sparse.to_dense(sparse_J)[None,:,:] + tf.eye(10)[None,:,:]) #needs to be symmetric and positive definite\n",
+    "test = tf.sparse.to_dense(sparse_J)[None,:,:] + 10*tf.eye(6)[None,:,:]\n",
+    "print(tf.linalg.eig(test)[0])\n",
+    "print(test)"
    ]
   },
   {
@@ -465,41 +507,56 @@
     "\n",
     "\\begin{equation}\n",
     "\\Large\n",
-    "H_{11} = I\n",
-    "\\end{equation}"
+    "H_{11} \\rightarrow H_{11} + I\n",
+    "\\end{equation}\n",
+    "\n",
+    "Optimization routine can't make sense of only relative measurements. We need to specify the first pose as the origin"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 235,
    "id": "d1f7340e",
    "metadata": {
     "scrolled": false
    },
+   "outputs": [],
+   "source": [
+    "# Load test data\n",
+    "odometry_history = np.load(\"test_data/leddartech_pixset/T_vec_history.npy\")\n",
+    "cov_estimate_history = np.load(\"test_data/leddartech_pixset/cov_vec_history.npy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "id": "ebef8bc3",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2.  3.]\n",
-      " [ 3.  4.]\n",
-      " [ 2.  3.]\n",
-      " [ 4. 11.]\n",
-      " [ 3. 11.]\n",
-      " [11. 14.]\n",
-      " [11. 14.]\n",
-      " [14. 17.]\n",
-      " [14. 17.]\n",
-      " [17. 20.]]\n"
+      "(185, 8)\n"
      ]
     }
    ],
    "source": [
-    "# Load test data\n",
-    "odometry_history = np.load(\"test_data/leddartech_pixset/T_vec_history.npy\")\n",
-    "cov_estimate_history = np.load(\"test_data/leddartech_pixset/cov_vec_history.npy\")\n",
-    "# print(odometry_history[:10,-2:])\n",
-    "# print(cov_estimate_history)"
+    "def get_information_matrix(cov_estimate):\n",
+    "    \"\"\"returns information matrix sigma from ICET cov_estimates\"\"\"\n",
+    "    \n",
+    "    print(np.shape(cov_estimate_history))\n",
+    "    \n",
+    "    #convert predicted stds -> covariance matrix\n",
+    "    \n",
+    "    #invert\n",
+    "    \n",
+    "    #convert to TF Tensor\n",
+    "    \n",
+    "    sigma = None #temp\n",
+    "    return sigma\n",
+    "    \n",
+    "sigma = get_information_matrix(cov_estimate_history[:,:6])"
    ]
   },
   {
@@ -509,49 +566,51 @@
    "source": [
     "# TODO\n",
     "\n",
-    "Get derivitive of error function\n",
-    "\n",
     "Figure out references in Jupyter Notebook\n",
     "\n",
     "\n",
     "# Questions\n",
     "\n",
-    "What is the Jacobian of the error function??\n",
+    "Should $A_{ij} = -B_{ij}$?\n",
     "\n",
     "Are there advantages to reporting state vector in unit quaternions? Besides being less intuitive to work with I've read they can also introduce problems in optimization routine since they add an additional degree of freedom. Every guide I've seen so far uses homogenous coordinate representation for the transformation matrices when computing the loss function, since they can be applied neatly in series. So rotation matrices do not produce singularities?\n",
     "\n",
     "Is what we did in ICET to handle sparsity (i.e. accumulating contributions for corresponding elements rather than performing full matrix inversion) similar to a Choelesky Decomposition?\n",
     "\n",
+    "<span style=\"color:red\"> What is going on with the numerics in get_e_ij()? Why is it not just t2v(Zij) - t2v(Zij)?? </span>\n",
+    "\n",
+    "\n",
     "\n",
     "# Potential Contributions\n",
     "\n",
-    "Use ICET error covaraince estimation to demonstrate improvement in accuracy for Volpe Dataset \n"
+    "Use ICET error covaraince estimation to demonstrate improvement in accuracy for Volpe Dataset\n",
+    "\n",
+    "Use ICET output to inform $\\Omega$ as a spatially dependant weighting field rather than simply indexing each unique point. Explore Gaussian Process Regression?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "id": "51a25671",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = tf.random.normal([600,600])\n",
+    "# print(tf.linalg.pinv(test))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ed7602d8",
+   "id": "ea56712b",
    "metadata": {},
-   "source": []
+   "source": [
+    "https://docs.scipy.org/doc/scipy/reference/generated/scipy.sparse.linalg.inv.html#scipy.sparse.linalg.inv"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebbe8263",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bea200ed",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3d6d19fc",
+   "id": "1c8b0a27",
    "metadata": {},
    "outputs": [],
    "source": []
